--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>My First Heading<h1>
-    <p>Hello, World<p>
-    <a href="https://sph.ocsb.ca/">School Website</a>
+    <p>Hello, World!<p>
     <script src="script.js"></script>
   </body>
 </html>
