--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>My First Webpage</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>My First Website</title>
   </head>
   <body>
-    <p>Hello, World!<p>
-    <script src="script.js"></script>
+    <h1>My First Heading</h1>
+    <p>Hello, World!</p>
+    <a href="https://sph.ocsb.ca/">School Website</a>
   </body>
 </html>
